[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "numfile"
author = "Bartosz Zaczyński"
author-email = "bartosz.zaczynski@gmail.com"
description-file = "README.md"
home-page = "https://github.com/bzaczynski/numfile"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dev-requires = [
    "bump2version==1.0.1",
    "pytest-mock==3.3.1",
    "pytest==6.1.2",
]
